# nla4hpc-exercises-framework

./: ABOUT-LICENSING.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  _config.yml
.github/workflows/: run-ci.yml
cmake/: DownloadCMakeLists.txt.in  NoInstallDownloadCMakeLists.txt.in  create_test.cmake  package_helpers.cmake
hw0/: README.md
hw0/uxxxx0/: CMakeLists.txt
hw0/uxxxx0/include/: hw0.hpp
hw0/uxxxx0/src/: hw0.cpp
hw0/uxxxx0/tests/: CMakeLists.txt  hw0.cpp
hw1/: README.md
hw1/uxxxx0/: CMakeLists.txt
hw1/uxxxx0/benchmark/: CMakeLists.txt  hw1.cpp
hw1/uxxxx0/include/: hw1.hpp
hw1/uxxxx0/src/: hw1.cpp
hw1/uxxxx0/tests/: CMakeLists.txt  hw1.cpp
hw3/: CMakeLists.txt  README.md
hw3/uxxxx0/: CMakeLists.txt
hw3/uxxxx0/include/: hw3.hpp
hw3/uxxxx0/src/: hw3.cpp
hw3/uxxxx0/tests/: CMakeLists.txt  hw3.cpp
hw4/: README.md
hw4/uxxxx0/: CMakeLists.txt
hw4/uxxxx0/include/: hw4.hpp
hw4/uxxxx0/src/: hw4.cpp
hw4/uxxxx0/tests/: CMakeLists.txt  hw4.cpp
hw5/: README.md
hw5/uxxxx0/: CMakeLists.txt
hw5/uxxxx0/include/: hw5.hpp
hw5/uxxxx0/src/: hw5.cpp
hw5/uxxxx0/tests/: CMakeLists.txt  hw5.cpp
hw6/: README.md
hw6/uxxxx0/: CMakeLists.txt
hw6/uxxxx0/include/: hw6.hpp
hw6/uxxxx0/src/: hw6.cpp
hw6/uxxxx0/tests/: CMakeLists.txt  hw6.cpp
include/: types.hpp
test/: assertions.hpp  utils.hpp
